Fixed header spacing

--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -4,7 +4,7 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-scrolling-nav/blob/master/LICENSE)
  */
 header {
-  padding: 156px 0 100px;
+  padding: 156px 0 60px;
 }
 
 section {
